added swagger for room handler
